# ppgst

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  libppgst.pc.in
cv/: Makefile.am  cvAverage.h  cvBlur.h  cvCamShift.cpp  cvCamShift.h  cvDilate.h  cvErode.h  cvFlip.h  cvImageData.cpp  cvImageData.h  cvMotion.h  cvMultiplyS.h  cvThreshold.h  cvVideoFilter.h  cvVideoOp.h  plugin.cpp  uvBlur.h  wSpatialProperties.h
misc/: Makefile  Makefile.am  Makefile.in  plugin.cpp  wAccumulate.cpp  wAccumulate.h  wAverage.cpp  wAverage.h  wExtremes.cpp  wExtremes.h  wGate.h  wInvert.cpp  wInvert.h  wMotion.cpp  wMotion.h  wNeartime.h  wOverall.cpp  wOverall.h  wRate.cpp  wRate.h  wShuffle.cpp  wShuffle.h  wStaticBackgroundMotion.cpp  wStaticBackgroundMotion.h  wTrigger.cpp  wTrigger.h
src/: Makefile.am  wAudio.h  wBaseMixer.h  wBaseSrc.h  wBaseTransform.h  wData.cpp  wData.h  wElement.h  wEnum.cpp  wEnum.h  wFloatData.h  wFormat.h  wInplace.h  wList.h  wObject.h  wOutofplace.h  wProducer.h  wProperty.cpp  wProperty.h  wRegister.h  wTransform.h  wVideo.h
test/: Makefile.am  plugin.cpp  wDataTest.h  wInplaceTest.h  wInserterTest.cpp  wInserterTest.h  wOutofplaceTest.h  wProducerTest.cpp  wProducerTest.h  wTransformTest.h
