# $Id: Makefile.am,v 1.3 2005/05/20 15:34:41 dan Exp $

NULL=


SUBDIRS = \
	src \
	test \
	misc \
	cv \
	$(NULL)


EXTRA_DIST = \
	libppgst.pc.in \
	depcomp \
	autogen.sh \
	$(NULL)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libppgst.pc

MAINTAINERCLEANFILES	= Makefile.in config.log config.status configure stamp-h.in config-h.in aclocal.m4 config.guess config.sub install-sh ltmain.sh missing
